--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 
     <title>Work in progress </title>
       <a href="https://discord.gg/HtPdSn3BFq">Discord</a>
-      <html><body><h1>Download "Andrew Tate Banning Simulator" ONLY ANDROID!</h1></body></html>
-      <a href="https://cdn.discordapp.com/attachments/995469578584981565/1018969079622672587/Andrew_tate_banning_sim.apk">Download ALPHA ver.1</a>
+      <html><body><h1>Work in progress</h1></body></html>
          <meta charset=utf-8">
     </head>
 
