--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		</ul>
 	</main>
 	<footer class="footer">
-		<p>Strona stworzona przez mnie &copy; 2023</p>
+		<p>Strona stworzona przez Chat GPT bo nie chce mi sie &copy; 2023</p>
 		<p><a href="#">Polityka prywatności</a> | <a href="#">Regulamin</a></p>
 	</footer>
 </body>
