--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <h2 id="sekcja2">Sekcja 2</h2>
     <p>To jest druga sekcja strony.</p>
     
-    <button onclick="window.open('https://www.google.com', '_blank')">Otwórz Google</button>
+    <button onclick="alert('Witaj na Google!')">Otwórz Google</button>
 </body>
 </html>
 
