--- a/index.html
+++ b/index.html
@@ -135,7 +135,13 @@
     <h2 id="sekcja2">Sekcja 2</h2>
     <p>co co co co</p>
     
-    <button onclick="window.open('https://www.youtube.com', '_blank')">i forgor</button>
+<button onclick="openPopup()">bruehwsib</button>
+
+    <script>
+        function openPopup() {
+            var myWindow = window.open("https://www.youtube.com", "GooglePopup", "width=600,height=400");
+        }
+    </script>
 </body>
 </html>
 
