--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
 <body>
     <h1>Witaj na mojej prostej stronie!</h1>
     <p>Tekistmniejszy </p>
-    
+    <a href="gpt1.html">strona od chatgpt</a>
+	
     <h2>Przykładowe linki:</h2>
     <ul>
         <li><a href="https://www.example.com">Przykładowy Link 1</a></li>
