--- a/gpt1.html
+++ b/gpt1.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Moja Strona</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -75,9 +76,9 @@
 
 <div class="container">
     <div class="social-buttons">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/" aria-label="Facebook"><i class="fab fa-facebook-f"></i> Facebook</a>
+        <a href="https://twitter.com/" aria-label="Twitter"><i class="fab fa-twitter"></i> Twitter</a>
+        <a href="https://www.instagram.com/" aria-label="Instagram"><i class="fab fa-instagram"></i> Instagram</a>
         <!-- Dodaj więcej przycisków lub zmień ikony zgodnie z Twoimi potrzebami -->
     </div>
     
