--- a/gpt1.html
+++ b/gpt1.html
@@ -69,7 +69,7 @@
 </header>
 
 <nav>
-    <a href="#">Strona główna</a>
+    <a href="index.html">Strona główna/opuść wersje gpt</a>
     <a href="about.html">O nas</a>
     <a href="contact.html">Kontakt</a>
 </nav>
