--- a/gpt1.html
+++ b/gpt1.html
@@ -79,6 +79,17 @@
         <a href="https://www.facebook.com/" aria-label="Facebook"><i class="fab fa-facebook-f"></i> Facebook</a>
         <a href="https://twitter.com/" aria-label="Twitter"><i class="fab fa-twitter"></i> Twitter</a>
         <a href="https://www.instagram.com/" aria-label="Instagram"><i class="fab fa-instagram"></i> Instagram</a>
+<button class="icon-button" onclick="window.location.href='https://www.tiktok.com/'">
+  <i class="fab fa-tiktok"></i>
+</button>
+
+<button class="icon-button" onclick="window.location.href='https://discord.com/'">
+  <i class="fab fa-discord"></i>
+</button>
+
+<button class="icon-button" onclick="window.location.href='https://www.android.com/'">
+  <i class="fab fa-android"></i>
+</button>
         <!-- Dodaj więcej przycisków lub zmień ikony zgodnie z Twoimi potrzebami -->
     </div>
     
