--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <title>nOCHYBATY c</title>
 </head>
 <body>
-    <h1>Witaj na mojej prostej stronie!</h1>
+    <h1>Witaj towarzyszu!</h1>
     <p>Tekistmniejszy </p>
     <a href="gpt1.html" id="bhtml">strona zrobiona przez chatgpt</a>
 
@@ -136,7 +136,7 @@
         });
     </script>
 	
-    <h2>Przykładowe linki:</h2>
+    <h2>Linki:</h2>
     <ul>
         <li><a href="https://www.example.com">Przykładowy Link 1</a></li>
         <li><a href="https://www.example.com">Przykładowy Link 2</a></li>
