--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <ul>
         <li><a href="https://www.example.com">Przykładowy Link 1</a></li>
         <li><a href="https://www.example.com">Przykładowy Link 2</a></li>
-        <li><a href="#sekcja2">Przykładowy Link do Sekcji 2</a></li>
+        <li><a href="https://www.example.com">Przykładowy Link 3</a></li>
     </ul>
     
     <h2 id="sekcja2">Sekcja 2</h2>
