--- a/index.html
+++ b/index.html
@@ -124,8 +124,11 @@
 <body>
     <h1>Witaj towarzyszu!</h1>
     <p>Tekistmniejszy </p>
+    <!--
     <a href="gpt1.html" id="bhtml">strona zrobiona przez chatgpt</a>
-
+    -->
+    <a href="fajnasciezka.html" id="bhtml">kliknij no tutaj</a>
+	
     <script>
         document.querySelectorAll("#bhtml").forEach(button => {
           button.addEventListener("click", function(event) {
